# Rust-newsletter

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: master.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/configuration/: base.yaml  production.yaml
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
