[package]
name = "rust-newsletter"
version = "0.1.0"
edition = "2021"

# On MacOS: `brew install michaeleisel/zld/zld`
#[target.x86_64-apple-darwin]
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
#[target.aarch64-apple-darwin]
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "rust-newsletter"

[dependencies]
actix-web = "4.0.0"
anyhow = "1"
config = "0.13"
chrono = "0.4.15"
log = "0.4"
once_cell = "1"
unicode-segmentation = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
thiserror = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
validator = "0.14"
# We need the `std_rng` to get access to the PRNG we want
rand = { version = "0.8", features=["std_rng"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads 
features = ["json", "rustls-tls"]

# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
claim = "0.5"
fake = "~2.3"
linkify = "0.8"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"